// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolveUrls handles URLs without protocol 1`] = `
Object {
  "data": Object {
    "resolvedUrls": Array [
      Object {
        "canonical": "http://example.com/",
        "title": "Example Domain",
        "url": "example.com",
      },
    ],
  },
}
`;

exports[`resolveUrls handles youtube URL 1`] = `
Object {
  "data": Object {
    "resolvedUrls": Array [
      Object {
        "canonical": "https://youtu.be/jNQXAC9IVRw",
        "error": null,
        "status": 200,
        "summary": "The first video on YouTube. Maybe it's time to go back to the zoo? The name of the music playing in the background is Darude - Sandstorm.",
        "title": "Me at the zoo",
        "url": "https://www.youtube.com/watch?v=jNQXAC9IVRw",
      },
      Object {
        "canonical": null,
        "error": null,
        "status": 404,
        "summary": null,
        "title": null,
        "url": "https://www.youtube.com/watch?v=not-exist",
      },
    ],
  },
}
`;

exports[`resolveUrls resolves normal URLs 1`] = `
Object {
  "data": Object {
    "resolvedUrls": Array [
      Object {
        "canonical": "https://example.com/",
        "error": null,
        "html": "<!DOCTYPE html><html><head>
    <title>Example Domain</title>

    <meta charset=\\"utf-8\\">
    <meta http-equiv=\\"Content-type\\" content=\\"text/html; charset=utf-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <style type=\\"text/css\\">
    body {
        background-color: #f0f0f2;
        margin: 0;
        padding: 0;
        font-family: \\"Open Sans\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif;
        
    }
    div {
        width: 600px;
        margin: 5em auto;
        padding: 50px;
        background-color: #fff;
        border-radius: 1em;
    }
    a:link, a:visited {
        color: #38488f;
        text-decoration: none;
    }
    @media (max-width: 700px) {
        body {
            background-color: #fff;
        }
        div {
            width: auto;
            margin: 0 auto;
            border-radius: 0;
            padding: 1em;
        }
    }
    </style>    
</head>

<body>
<div>
    <h1>Example Domain</h1>
    <p>This domain is established to be used for illustrative examples in documents. You may use this
    domain in examples without prior coordination or asking for permission.</p>
    <p><a href=\\"http://www.iana.org/domains/example\\">More information...</a></p>
</div>


</body></html>",
        "status": 200,
        "summary": "This domain is established to be used for illustrative examples in documents. You may use this
    domain in examples without prior coordination or asking for permission.
    More information...",
        "title": "Example Domain",
        "topImageUrl": "",
        "url": "https://example.com",
      },
    ],
  },
}
`;

exports[`resolveUrls returns fetch error properly 1`] = `
Object {
  "data": Object {
    "resolvedUrls": Array [
      Object {
        "error": "NAME_NOT_RESOLVED",
        "url": "https://this-cannot-be-resolved.com",
      },
      Object {
        "error": "INVALID_URL",
        "url": "no-protocol.com",
      },
    ],
  },
}
`;

exports[`resolveUrls returns minimal data on error 1`] = `
Object {
  "data": Object {
    "resolvedUrls": Array [
      Object {
        "canonical": "http://blog.udn.com/watercmd/1066441",
        "error": null,
        "summary": "主題：『吃香腸配養樂多會致癌嗎？』 我也是台客    轉貼: 　　導正『吃香腸配養樂多會致癌嗎？』的錯誤觀念　陳柏瑞 　　硝酸鹽和亞硝酸鹽是廣泛存在於自然環境中的化學物質，特別是在食物中，如蔬菜、 肉...",
        "title": "主題：吃香腸配養樂多會致癌嗎？ - 查無此人 - udn部落格",
        "topImageUrl": "https://g.udn.com.tw/community/img/common_all/blog_ogimg.jpg",
        "url": "http://blog.udn.com/watercmd/1066441",
      },
    ],
  },
}
`;
